[package]
name = "test-macros"
version = "0.1.0"
edition = "2024"

[dependencies]
rltbl_db_row = { path = "../rltbl_db_row" }
rltbl_db_row_derive = { path = "../rltbl_db_row/rltbl_db_row_derive" }
rltbl_db = { git = "https://github.com/rltbl/rltbl_db", branch = "main" }
serde = { version = "1.0.226", features = ["derive"] }